--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-*.script linguist-language=LUA
+*			text=auto
+*.xml		text eol=crlf working-tree-encoding=windows-1251
+*.lua		text eol=crlf working-tree-encoding=windows-1251
+*.script	text eol=crlf working-tree-encoding=windows-1251 linguist-language=LUA
